[package]
name = "sealevel-ffi"
version = "1.11.2"
description = "FFI bindings for Sealevel virtual machine"
authors = ["Richard Patel <me@terorie.dev>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/rbpf-ffi"
license = "Apache-2.0"
edition = "2021"

[lib]
name = "sealevel"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2.126"
solana-bpf-loader-program = "1.11.1"
solana-program-runtime = "1.11.1"
solana_rbpf = "=0.2.31"
