[package]
name = "sealevel-ffi"
version = "0.1.0"
description = "FFI bindings for Sealevel virtual machine"
authors = ["Richard Patel <me@terorie.dev>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://solana.com/"
documentation = "https://docs.rs/sealevel-ffi"
license = "Apache-2.0"
edition = "2021"
categories = ["cryptography::cryptocurrencies"]
keywords = ["solana"]

[lib]
name = "sealevel"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2"
solana-bpf-loader-program = "1.11.4"
solana-program-runtime = "1.11.3"
solana_rbpf = "=0.2.31"
